*
* 0.1.4
*

- Created performance subagent for Windows (winperf.nsm)


*
* 0.1.3
*

- Added 64-bit string-to-binary conversion
- Added MAC address property to interface objects
- Added Template and TemplateGroup object classes
- It's now possible to configure data collection items for templates


*
* 0.1.2
*

- Added possibility for copying DCIs from one node to other(s)
- Added server's startup script for RedHat Linux
- Numerous bug fixes