@@ -397,6 +397,7 @@ src/server/core/nms_locks.h -text
 src/server/core/nms_objects.h -text
 src/server/core/nms_users.h -text
 src/server/core/node.cpp -text
+src/server/core/nortel.cpp -text
 src/server/core/np.cpp -text
 src/server/core/objects.cpp -text
 src/server/core/resource.h -text
