@@ -24,6 +24,7 @@
 
 #include "stdafx.h"
 #include "nxcon.h"
+#include <nxnt.h>
 
 
 //
@@ -212,3 +213,15 @@ HANDLE g_mutexActionListAccess = INVALID_HANDLE_VALUE;
 //
 
 NXC_CC_LIST *g_pCCList = NULL;
+
+
+//
+// Well-known node types
+//
+
+CODE_TO_TEXT g_ctNodeType[] =
+{
+   { NODE_TYPE_GENERIC, _T("Generic") },
+   { NODE_TYPE_NORTEL_ACCELAR, _T("Nortel Networks Passport switch") },
+   { 0, NULL }    // End of list
+};
