@@ -230,6 +230,7 @@ extern DWORD g_dwNumActions;
 extern NXC_ACTION *g_pActionList;
 extern HANDLE g_mutexActionListAccess;
 extern NXC_CC_LIST *g_pCCList;
+extern CODE_TO_TEXT g_ctNodeType[];
 
 
 //
