@@ -3,6 +3,7 @@
 *
 
 - Created performance subagent for Windows (winperf.nsm)
+- Added support for Nortel Networks Passport routing switches
 
 
 *
